# locus-vision

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HAILO.md  LICENSE  MODEL_SELECTION_PLAN.md  PLAN_activity_feed.md  README.md  components.json  docker-compose.yml  docker-entrypoint.sh  package.json  pnpm-lock.yaml  vite.config.ts
backend/: Dockerfile  config.py  database.py  download_models.py  main.py  model_catalog.json  models.py  pyproject.toml  requirements.txt  test.parquet
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  camera.py  jobs.py  system.py  ws.py
backend/app/core/: detector.py  live_detector.py  vision_utils.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  coco_classes.py  db.py  file_handler.py  gpu_utils.py  processor.py
backend/routers/: analytics.py  auth.py  cameras.py  livestream.py  metrics.py  models.py  settings.py  system.py  video_processing.py
backend/scripts/: benchmark_inference.py  benchmark_video_decode.py  export_model.py
backend/services/: analytics_engine.py  camera_worker.py  discovery_service.py  duckdb_client.py  job_queue.py  livestream_manager.py  metrics_collector.py  model_manager.py  onnx_detector.py  video_capture.py
backend/tests/: test_analytics_engine.py  test_cameras.py  test_discovery_service.py  test_livestream_events_persistence.py  test_livestream_manager.py  test_model_upload.py  test_onnx_detector.py  test_peak_hours.py  test_phase1.py  test_video_capture.py
docs/: DB-architect.md  MODELS.md  (+3 more)
(+96 files in other folders)
