[project]
name = "locus-vision"
version = "0.2.0"
description = "Locus Vision Analytics - FastAPI Backend"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "ultralytics>=8.3.0",
    "lapx>=0.5.5",
    
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.18",
    
    # Utilities
    "werkzeug>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
